--- a/prgm5/prgm5.css
+++ b/prgm5/prgm5.css
@@ -1,11 +1,10 @@
 StudentList{
 	text-align: center;
 	padding: 50px;
-
 }
 
 Student {
-	background: #999999;
+	background: #EEEEEE;
 	border: 2px solid black;
 	border-radius: 15px;
 	display: inline-block;
@@ -16,18 +15,18 @@ name, usn, email, branch, college-name, year {
 	font-family: sans-serif;
 	display: block;
 }
-name{
-	color: blue;
-}
-usn{
-	color: red;
-}
-email{
-	color: green;
-}
-branch{
-	color: pink;
-}
-college-name {
-	color: skyblue;
-}
+/*name{*/
+	/*color: #0ed0ff;*/
+/*}*/
+/*usn{*/
+	/*color: #ff6a16;*/
+/*}*/
+/*email{*/
+	/*color: #018000;*/
+/*}*/
+/*branch{*/
+	/*color: #ff2d25;*/
+/*}*/
+/*college-name {*/
+	/*color: skyblue;*/
+/*}*/
